# comind-dock

./: CLAUDE.md  Cargo.toml  README.md  flake.nix  install.sh  rustfmt.toml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CLI.md  CONFIGURATION.md  FEATURES.md  ROADMAP.md
docs/superpowers/plans/: 2026-07-17-drag-drop-tabs-panes.md
docs/superpowers/specs/: 2026-07-10-sidebar-toggle-design.md  2026-07-17-drag-drop-tabs-panes-design.md
packaging/homebrew/: cdock.rb
src/: agents.rs  api.rs  client.rs  default_config.toml  git.rs  logging.rs  main.rs  plugin.rs  profile.rs  proto.rs  server.rs  update.rs
src/config/: keys.rs  mod.rs  theme.rs
src/detect/: mod.rs
src/detect/manifests/: claude.toml  codex.toml  opencode.toml
src/input/: encode.rs  mod.rs  mouse.rs
src/integration/: cdock_skill.md
src/platform/: mod.rs  unix.rs
src/runtime/: event.rs  mod.rs
src/state/: ids.rs  layout.rs  mod.rs  snapshot.rs  workspace.rs
src/term/: emulator.rs  mod.rs  pty.rs
src/ui/: help.rs  menu.rs  mod.rs  pane_widget.rs  sidebar.rs  tabbar.rs  toast.rs  view.rs
