[package]
name = "cdock"
version = "0.4.6"
edition = "2024"
license = "MIT"
description = "comind-dock: terminal-native runtime and multiplexer for AI coding agents"

[dependencies]
# ponytail: pinned exact — 0.x internal-first crate, API moves between minors
alacritty_terminal = "=0.26.0"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal"] }
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
clap = { version = "4", features = ["derive"] }
unicode-width = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
libc = "0.2.186"

[profile.release]
lto = "thin"
strip = true
